# Messenger

./: .bash  .gitigrone  CMakeLists.txt  README.md  a.out  include.h  main.cpp
Client/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Makefile  a.out  client  client.cpp  client.h  cmake_install.cmake  main_client.cpp  net_client.h
Client/Interface/: a.out  autorisation.cpp  autorisation.h  autorisation.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/build-interface-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Client/build-interface-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-3fdc75dad909b54809a3.json  index-2023-07-20T09-43-30-0072.json  index-2023-07-25T19-40-52-0835.json  index-2023-07-31T10-19-58-0219.json  target-interface-Debug-8439052d071cd20cbdc3.json  target-interface_autogen_timestamp_deps-Debug-e236650f75372de28abf.json
Client/build-interface-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-d3cca1c13b0c81af5731.json  cmakeFiles-v1-c0b970a6bd42a811d961.json  cmakeFiles-v1-c8c801cec70171d0195b.json  codemodel-v2-35d073af66cdd51d8c37.json  codemodel-v2-35d82ecc01fdfa95974b.json  codemodel-v2-7d2bc7a1f28ff3e37cc2.json  codemodel-v2-c9c8d4ac6b2586d7b034.json  index-2023-07-20T09-43-02-0240.json  index-2023-07-23T19-33-42-0707.json  index-2023-07-23T19-50-59-0943.json  target-interface-Debug-1dc495e2dad2f7ce2fe8.json  target-interface-Debug-2be98618d526c148416f.json  target-interface-Debug-bd7a9ce28089c7c29cf0.json  target-interface-Debug-ebd4d82833d919acf0fd.json  target-interface_autogen-Debug-a8d38ace31ebedceea12.json
Client/build-interface-Desktop-Debug/interface_autogen/: deps  mocs_compilation.cpp
Client/build-interface-Desktop-Debug/interface_autogen/EWIEGA46WW/: moc_autorisation.cpp  moc_autorisation.cpp.d  moc_autorization.cpp  moc_autorization.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_registration.cpp  moc_registration.cpp.d
Client/build-interface-Desktop-Debug/interface_autogen/include/: ui_autorization.h  ui_mainwindow.h
Client/interface/: CMakeLists.txt  autorisation.cpp  autorisation.h  autorisation.ui  autorization.cpp  autorization.h  autorization.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registration.cpp  registration.h  registration.ui  widget.css
DBWork/: a.out  data_base.cpp  data_base.h  ddl.sql  main.cpp
GrInterface/: CMakeLists.txt  gr_interface.cpp  gr_interface.h  main.cpp  text_render.h
GrInterface/glad/: glad.c  glad.h
GrInterface/text/freetype/: CMakeLists.txt
GrInterface/text/freetype/builds/unix/: aclocal.m4  configure  configure.ac
GrInterface/text/freetype/docs/reference/: 404.html  ft2-auto_hinter.html  ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-bzip2.html  ft2-cache_subsystem.html  ft2-cff_driver.html  ft2-cid_fonts.html  ft2-color_management.html  ft2-computations.html  ft2-debugging_apis.html  ft2-error_code_values.html  ft2-error_enumerations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-header_inclusion.html  ft2-incremental.html  ft2-index.html  ft2-layer_management.html  ft2-lcd_rendering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-module_management.html  ft2-multiple_masters.html  ft2-ot_svg_driver.html  ft2-ot_validation.html  ft2-outline_processing.html  ft2-parameter_tags.html  ft2-pcf_driver.html  ft2-pfr_fonts.html  ft2-preamble.html  (+17 more)
NetWork/: message.h  net.h  net_client.h  net_common.h  net_connection.h  net_deque.h  net_message.h  net_queue.h  net_server.h
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp  net_server.h  server
Server/Killer/: CMakeLists.txt  Killer.cpp
WorkDB/: data_base.h  ddl.sql
